--- a/css/style.scss
+++ b/css/style.scss
@@ -10,12 +10,135 @@ body {
 }
 
 main {
-	flex: 1 1 auto;
+	display: flex;
+	flex-direction: column;
+	.mainProductBlock {
+		display: grid;
+		grid-template-columns: 1fr 4fr;
+		.mainMenuContainer {
+			.mainMenuContainer_menu {
+				padding: 25px;
+				border-radius: 10px;
+				border: 2px #B0B0B0 solid;
+			}
+		}
+		.mainProductBlock__cardContainer {
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr 1fr;
+			grid-gap: 60px;
+			margin-left: 60px;
+			.cardContainer_card {
+				max-width: 250px;
+				border-radius: 10px;
+				display: flex;
+				flex-direction: column;
+				cursor: pointer;
+				.card_sale {
+					color: #49751C;
+					font-size: 22px;
+					font-weight: 500;
+					word-wrap: break-word;
+					span {
+						color: #1E1E1E;
+						font-size: 14px;
+						font-weight: 400;
+						text-decoration: line-through;
+					}
+					margin-bottom: 7px;
+				}
+				.card_description {
+					margin-bottom: 20px;
+					font-size: 14px;
+					color: #4B4B4B;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					span {
+						color: #1E1E1E;
+						font-weight: 500;
+					}
+				}
+				a {
+					display: flex;
+					color: #EEEFF1;
+					font-size: 16px;
+					background: #49751C;
+					border-radius: 10px;
+					justify-content: center;
+					align-items: center;
+					padding: 10px 0;
+					img {
+						max-width: auto;
+						min-width: auto;
+						height: auto;
+						margin-bottom: 0;
+						margin-right: 10px;
+					}
+					&:last-child {
+						transition: 200ms;
+						&:hover {
+							background: #5e9b21;
+							transition: 200ms;
+						}
+					}
+					&:first-child {
+						img {
+							max-width: 100%;
+							min-width: 250px;
+							height: auto;
+							margin-right: none;
+							margin-bottom: 10px;
+						}
+						background: none;
+						display: block;
+						font-size: none;
+						border-radius: none;
+						justify-content: none;
+						align-items: none;
+						padding: none;
+					}
+				}
+			}
+			.buttonMore {
+				grid-column: 1 / 5;
+				background: #E4E4E4;
+				border-radius: 10px;
+				transition: 200ms;
+				a {
+					display: flex;
+					width: 100%;
+					color: #8C8C8C;
+					justify-content: center;
+					align-items: center;
+					padding: 10px 0;
+				}
+				&:hover {
+					transition: 200ms;
+					background: #cecece;
+					a {
+						color: #ffffff;
+					}
+				}
+			}
+		}
+	}
+	.saleTwo {
+		margin-top: 60px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: 40px;
+		img {
+			width: 100%;
+			height: 100%;
+			border-radius: 10px;
+		}
+	}
 }
 
 header {
 	background: #49751C;
-	padding: 30px 0;
+	padding: 10px 0;
 	nav {
 		display: grid;
 		grid-template-columns: 1fr 2fr 1fr;
@@ -82,7 +205,7 @@ header {
 		}
 
 	}
-	.headerNav_searchContainer {
+	.headerNav__searchContainer {
 		width: 100%;
 		padding: 0 80px;
 		input {
@@ -123,21 +246,26 @@ header {
 	
 //}
 
+
+
+
+
+
+
 .saleSlider {
 	margin-top: 30px;
 	border-radius: 15px;
-	width: 100vw;
+	img {
+		display: block;
+		width: 100%;
+		height: 100%;
+	}
+	position: relative;
+	margin-bottom: 60px;
 }
-
-
-
-
-
-
 
 /* Слайдер */
 .slick-slider{
-	position: relative;
 	overflow: hidden;
 }
 
@@ -145,22 +273,6 @@ header {
 .slick-track{
 	display: flex;
 }
-
-/* Слайд */
-.slick-slide{
-}
-
-/* Слайд активный (показывается) */
-.slick-slide.slick-active{}
-
-/* Слайд основной */
-.slick-slide.slick-current{}
-
-/* Слайд по центру */
-.slick-slide.slick-center{}
-
-/* Клонированный слайд */
-.slick-slide.slick-cloned{}
 
 /* Стрелка */
 .slick-arrow{
@@ -179,28 +291,19 @@ header {
 /* Стрелка влево */
 .slick-arrow.slick-prev{
 	left: 0;
-	top: 8vh;
+	top: 50%;
+    transform: translateY(-50%);
 }
 
 /* Стрелка вправо */
 .slick-arrow.slick-next{
 	right: 0;
-	top: 8vh;
-	transform: rotate(-180deg);
+	top: 50%;
+    transform: translateY(-50%) rotate(-180deg);
 }
 
 /* Стрелка не активная */
 .slick-arrow.slick-disabled{
 	transition: 0.3s;
-	opacity: 0.2;
+	opacity: 0.7;
 }
-
-/* Точки (булиты) */
-.slick-dots{}
-.slick-dots li{}
-
-/* Активная точка */
-.slick-dots li.slick-active{}
-
-/* Элемент точки */
-.slick-dots li button{}
