--- a/css/style.scss
+++ b/css/style.scss
@@ -22,104 +22,119 @@ main {
 				border: 2px #B0B0B0 solid;
 			}
 		}
-		.mainProductBlock__cardContainer {
-			display: grid;
-			grid-template-columns: 1fr 1fr 1fr 1fr;
-			grid-gap: 60px;
-			margin-left: 60px;
-			.cardContainer_card {
-				max-width: 250px;
-				border-radius: 10px;
-				display: flex;
-				flex-direction: column;
-				cursor: pointer;
-				.card_sale {
-					color: #49751C;
-					font-size: 22px;
-					font-weight: 500;
-					word-wrap: break-word;
-					span {
-						color: #1E1E1E;
-						font-size: 14px;
-						font-weight: 400;
-						text-decoration: line-through;
-					}
-					margin-bottom: 7px;
-				}
-				.card_description {
-					margin-bottom: 20px;
+	}
+	.mainProductBlock__cardContainer {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-gap: 60px;
+		margin-left: 60px;
+		&:nth-child(1) {
+			margin: 0;
+			grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+			grid-template-rows: 1fr;
+			margin: 60px 0;
+		}
+		.cardContainer_card {
+			max-width: 250px;
+			border-radius: 10px;
+			display: flex;
+			flex-direction: column;
+			cursor: pointer;
+			.card_sale {
+				color: #49751C;
+				font-size: 22px;
+				font-weight: 500;
+				word-wrap: break-word;
+				span {
+					color: #1E1E1E;
 					font-size: 14px;
-					color: #4B4B4B;
-					overflow: hidden;
-					text-overflow: ellipsis;
-					white-space: nowrap;
-					span {
-						color: #1E1E1E;
-						font-weight: 500;
-					}
+					font-weight: 400;
+					text-decoration: line-through;
 				}
-				a {
-					display: flex;
-					color: #EEEFF1;
-					font-size: 16px;
-					background: #49751C;
-					border-radius: 10px;
-					justify-content: center;
-					align-items: center;
-					padding: 10px 0;
-					img {
-						max-width: auto;
-						min-width: auto;
-						height: auto;
-						margin-bottom: 0;
-						margin-right: 10px;
-					}
-					&:last-child {
-						transition: 200ms;
-						&:hover {
-							background: #5e9b21;
-							transition: 200ms;
-						}
-					}
-					&:first-child {
-						img {
-							max-width: 100%;
-							min-width: 250px;
-							height: auto;
-							margin-right: none;
-							margin-bottom: 10px;
-						}
-						background: none;
-						display: block;
-						font-size: none;
-						border-radius: none;
-						justify-content: none;
-						align-items: none;
-						padding: none;
-					}
+				margin-bottom: 7px;
+			}
+			.card_description {
+				margin-bottom: 20px;
+				font-size: 14px;
+				color: #4B4B4B;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+				span {
+					color: #1E1E1E;
+					font-weight: 500;
 				}
 			}
-			.buttonMore {
-				grid-column: 1 / 5;
-				background: #E4E4E4;
+			a:last-child {
+				display: flex;
+				color: #EEEFF1;
+				font-size: 16px;
+				background: #49751C;
 				border-radius: 10px;
-				transition: 200ms;
-				a {
-					display: flex;
-					width: 100%;
-					color: #8C8C8C;
-					justify-content: center;
-					align-items: center;
-					padding: 10px 0;
+				justify-content: center;
+				align-items: center;
+				padding: 10px 0;
+				img {
+					max-width: auto;
+					min-width: auto;
+					height: auto;
+					margin-bottom: 0;
+					margin-right: 10px;
 				}
-				&:hover {
+				&:last-child {
 					transition: 200ms;
-					background: #cecece;
-					a {
-						color: #ffffff;
+					&:hover {
+						background: #5e9b21;
+						transition: 200ms;
 					}
 				}
 			}
+			a:first-child {
+				img {
+					max-width: 100%;
+					min-width: 250px;
+					height: auto;
+					margin-right: none;
+					margin-bottom: 20px;
+				}
+				background: none;
+				display: block;
+				font-size: none;
+				border-radius: none;
+				justify-content: none;
+				align-items: none;
+				padding: none;
+			}
+		}
+		.buttonMore {
+			grid-column: 1 / 5;
+			background: #E4E4E4;
+			border-radius: 10px;
+			transition: 200ms;
+			a {
+				display: flex;
+				width: 100%;
+				color: #8C8C8C;
+				justify-content: center;
+				align-items: center;
+				padding: 10px 0;
+			}
+			&:hover {
+				transition: 200ms;
+				background: #cecece;
+				a {
+					color: #ffffff;
+				}
+			}
+		}
+	}
+	.mainSecondProductBlock__cardContainer {
+		display: flex;
+		align-items: center;
+		.cardContainer_card {
+			grid-gap: 0;
+			margin: 0;
+			padding: 0;
 		}
 	}
 	.saleTwo {
@@ -134,8 +149,78 @@ main {
 			border-radius: 10px;
 		}
 	}
+	.saleFour {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: 40px;
+		margin-bottom: 60px;
+		img {
+			width: 100%;
+			height: 100%;
+			border-radius: 10px;
+		}
+	}
 }
-
+footer {
+	background: #49751C;
+	padding: 50px 0;
+	color: #EEEFF1;
+	.footerContainer {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		justify-items: center;
+		align-items: end;
+	}
+	.footerContainer__first {
+		p {
+			font-size: 20px;
+			font-weight: 500;
+			span {
+				font-size: 18px;
+				font-weight: 400;
+				text-decoration: underline;
+			}
+		}
+	}
+	.footerContainer__second {
+	}
+	.footerContainer__social__title {
+		text-align: center;
+		font-size: 24px;
+		font-weight: 600;
+	}
+	.footerContainer__social__Svgs {
+		margin-top: 20px;
+		text-align: center;
+		width: 250px;
+		p {
+			font-size: 20px;
+			font-weight: 500;
+			span {
+				font-size: 18px;
+				text-decoration: underline;
+				font-weight: 400;
+			}
+		}
+	}
+	.footerContainer__third {
+		text-align: right;
+		p {
+			font-size: 20px;
+			font-weight: 500;
+			&:last-child{
+				margin-top: 15px;
+				font-size: 14px;
+			}
+			span {
+				font-size: 18px;
+				text-decoration: underline;
+				font-weight: 400;
+			}
+		}
+	}
+}
 header {
 	background: #49751C;
 	padding: 10px 0;
@@ -157,7 +242,6 @@ header {
 							font-weight: 500;
 							font-size: 13px;
 							line-height: 100%;
-							text-transform: capitalize;
 							color: #FFFFFF;
 							background: #F95555;
 							padding: 5px 6px 1px 5px;
@@ -175,7 +259,6 @@ header {
 							font-weight: 500;
 							font-size: 12px;
 							line-height: 100%;
-							text-transform: capitalize;
 							color: #FFFFFF;
 							background: #F95555;
 							padding: 4px 6px 3px 5px;
